# rtcheck

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  interception.h  lib_rt_check.cpp  lib_rt_check.h  rtcheck.cpp  rtcheck.h
tests/: CMakeLists.txt  fail_calloc.cpp  fail_custom_function.cpp  fail_false_mutex_unique_lock_uncontended.cpp  fail_false_mutex_unique_try_lock_uncontended.cpp  fail_fcntl.cpp  fail_file_size.cpp  fail_free.cpp  fail_large_atomic.cpp  fail_large_function.cpp  fail_large_thread_local.cpp  fail_malloc.cpp  fail_mmap.cpp  fail_munmap.cpp  fail_mutex_lock.cpp  fail_mutex_unique_lock_contended.cpp  fail_mutex_unique_try_lock_contended.cpp  fail_mutex_unlock.cpp  fail_nanosleep.cpp  fail_open.cpp  fail_posix_memalign.cpp  fail_read_file.cpp  fail_realloc.cpp  fail_reallocf.cpp  fail_shared_mutex_shared_lock_contended.cpp  fail_shared_mutex_shared_lock_uncontended.cpp  fail_sleep.cpp  fail_stdsleep.cpp  fail_syscall.cpp  fail_thread_create.cpp  fail_thread_join.cpp  fail_throw_exception.cpp  fail_usleep.cpp  fail_valloc.cpp  fail_vector.cpp  pass_nothrow_exception.cpp  pass_shared_mutex_shared_lock_uncontended.cpp  pass_small_atomic.cpp  pass_small_function.cpp  pass_unit_tests.cpp  (+5 more)
tests/ignoring/: pass_malloc_ignore.cpp  pass_memory_ignore.cpp
